src/expr/src/scalar/snapshots/mz_expr__scalar__func__convert_from.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"convert_from\", propagates_nulls = true)]\nfn convert_from<'a>(a: &'a ByteStr, b: &str) -> Result<&'a str, EvalError> {\n    let encoding_name = b.to_lowercase().replace('_', \"-\").into_boxed_str();\n    if encoding_from_whatwg_label(&encoding_name).map(|e| e.name()) != Some(\"utf-8\") {\n        return Err(EvalError::InvalidEncodingName(encoding_name));\n    }\n    match str::from_utf8(a.into()) {\n        Ok(from) => Ok(from),\n        Err(e) => {\n            Err(EvalError::InvalidByteSequence {\n                byte_sequence: e.to_string().into(),\n                encoding_name,\n            })\n        }\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct ConvertFrom;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for ConvertFrom {
    type Input1 = &'a ByteStr;
    type Input2 = &'a str;
    type Output = Result<&'a str, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        convert_from(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for ConvertFrom {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("convert_from")
    }
}
fn convert_from<'a>(a: &'a ByteStr, b: &str) -> Result<&'a str, EvalError> {
    let encoding_name = b.to_lowercase().replace('_', "-").into_boxed_str();
    if encoding_from_whatwg_label(&encoding_name).map(|e| e.name()) != Some("utf-8") {
        return Err(EvalError::InvalidEncodingName(encoding_name));
    }
    match str::from_utf8(a.into()) {
        Ok(from) => Ok(from),
        Err(e) => {
            Err(EvalError::InvalidByteSequence {
                byte_sequence: e.to_string().into(),
                encoding_name,
            })
        }
    }
}
