src/expr/src/scalar/snapshots/mz_expr__scalar__func__date_bin_timestamp.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(is_monotone = \"(true, true)\", sqlname = \"bin_unix_epoch_timestamp\")]\nfn date_bin_timestamp<'a>(\n    stride: Interval,\n    source: CheckedTimestamp<NaiveDateTime>,\n) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {\n    let origin = CheckedTimestamp::from_timestamplike(\n            DateTime::from_timestamp(0, 0).unwrap().naive_utc(),\n        )\n        .expect(\"must fit\");\n    date_bin(stride, source, origin)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct DateBinTimestamp;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for DateBinTimestamp {
    type Input1 = Interval;
    type Input2 = CheckedTimestamp<NaiveDateTime>;
    type Output = Result<CheckedTimestamp<NaiveDateTime>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        date_bin_timestamp(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
}
impl std::fmt::Display for DateBinTimestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("bin_unix_epoch_timestamp")
    }
}
impl DateBinTimestamp {
    pub const fn func_doc() -> crate::func::FuncDoc {
        crate::func::FuncDoc {
            unique_name: stringify!(date_bin_timestamp),
            category: "Uncategorized",
            signature: "bin_unix_epoch_timestamp(stride interval, source timestamp) -> timestamp",
            description: "",
            ..crate::func::FuncDoc::default()
        }
    }
}
fn date_bin_timestamp<'a>(
    stride: Interval,
    source: CheckedTimestamp<NaiveDateTime>,
) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {
    let origin = CheckedTimestamp::from_timestamplike(
            DateTime::from_timestamp(0, 0).unwrap().naive_utc(),
        )
        .expect("must fit");
    date_bin(stride, source, origin)
}
