src/expr/src/scalar/snapshots/mz_expr__scalar__func__date_bin_timestamp_tz.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(is_monotone = \"(true, true)\", sqlname = \"bin_unix_epoch_timestamptz\")]\nfn date_bin_timestamp_tz<'a>(\n    stride: Interval,\n    source: CheckedTimestamp<DateTime<Utc>>,\n) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {\n    let origin = CheckedTimestamp::from_timestamplike(\n            DateTime::from_timestamp(0, 0).unwrap(),\n        )\n        .expect(\"must fit\");\n    date_bin(stride, source, origin)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct DateBinTimestampTz;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for DateBinTimestampTz {
    type Input1 = Interval;
    type Input2 = CheckedTimestamp<DateTime<Utc>>;
    type Output = Result<CheckedTimestamp<DateTime<Utc>>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        date_bin_timestamp_tz(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
}
impl std::fmt::Display for DateBinTimestampTz {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("bin_unix_epoch_timestamptz")
    }
}
impl DateBinTimestampTz {
    pub const fn func_doc() -> crate::func::FuncDoc {
        crate::func::FuncDoc {
            unique_name: stringify!(date_bin_timestamp_tz),
            category: "Uncategorized",
            signature: "bin_unix_epoch_timestamptz(stride interval, source timestamptz) -> timestamptz",
            description: "",
            ..crate::func::FuncDoc::default()
        }
    }
}
fn date_bin_timestamp_tz<'a>(
    stride: Interval,
    source: CheckedTimestamp<DateTime<Utc>>,
) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {
    let origin = CheckedTimestamp::from_timestamplike(
            DateTime::from_timestamp(0, 0).unwrap(),
        )
        .expect("must fit");
    date_bin(stride, source, origin)
}
