src/expr/src/scalar/snapshots/mz_expr__scalar__func__date_part_interval_numeric.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(\n    output_type = \"Numeric\",\n    sqlname = \"extractiv\",\n    propagates_nulls = true,\n    introduces_nulls = false\n)]\nfn date_part_interval_numeric<'a>(\n    a: Datum<'a>,\n    b: Datum<'a>,\n) -> Result<Datum<'a>, EvalError> {\n    let units = a.unwrap_str();\n    match units.parse() {\n        Ok(units) => {\n            Ok(date_part_interval_inner::<Numeric>(units, b.unwrap_interval())?.into())\n        }\n        Err(_) => Err(EvalError::UnknownUnits(units.into())),\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct DatePartIntervalNumeric;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for DatePartIntervalNumeric {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Result<Datum<'a>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        date_part_interval_numeric(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = <Numeric>::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        false
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for DatePartIntervalNumeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("extractiv")
    }
}
fn date_part_interval_numeric<'a>(
    a: Datum<'a>,
    b: Datum<'a>,
) -> Result<Datum<'a>, EvalError> {
    let units = a.unwrap_str();
    match units.parse() {
        Ok(units) => {
            Ok(date_part_interval_inner::<Numeric>(units, b.unwrap_interval())?.into())
        }
        Err(_) => Err(EvalError::UnknownUnits(units.into())),
    }
}
