src/expr/src/scalar/snapshots/mz_expr__scalar__func__date_part_timestamp_timestamp_f64.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"date_partts\", propagates_nulls = true)]\nfn date_part_timestamp_timestamp_f64(\n    units: &str,\n    ts: CheckedTimestamp<NaiveDateTime>,\n) -> Result<f64, EvalError> {\n    match units.parse() {\n        Ok(units) => date_part_timestamp_inner(units, &*ts),\n        Err(_) => Err(EvalError::UnknownUnits(units.into())),\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct DatePartTimestampTimestampF64;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for DatePartTimestampTimestampF64 {
    type Input1 = &'a str;
    type Input2 = CheckedTimestamp<NaiveDateTime>;
    type Output = Result<f64, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        date_part_timestamp_timestamp_f64(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for DatePartTimestampTimestampF64 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("date_partts")
    }
}
fn date_part_timestamp_timestamp_f64(
    units: &str,
    ts: CheckedTimestamp<NaiveDateTime>,
) -> Result<f64, EvalError> {
    match units.parse() {
        Ok(units) => date_part_timestamp_inner(units, &*ts),
        Err(_) => Err(EvalError::UnknownUnits(units.into())),
    }
}
