src/expr/src/scalar/snapshots/mz_expr__scalar__func__date_trunc_units_timestamp_tz.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"date_trunctstz\", propagates_nulls = true)]\nfn date_trunc_units_timestamp_tz(\n    units: &str,\n    ts: CheckedTimestamp<DateTime<Utc>>,\n) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {\n    match units.parse() {\n        Ok(units) => Ok(date_trunc_inner(units, &*ts)?.try_into()?),\n        Err(_) => Err(EvalError::UnknownUnits(units.into())),\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct DateTruncUnitsTimestampTz;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for DateTruncUnitsTimestampTz {
    type Input1 = &'a str;
    type Input2 = CheckedTimestamp<DateTime<Utc>>;
    type Output = Result<CheckedTimestamp<DateTime<Utc>>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        date_trunc_units_timestamp_tz(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for DateTruncUnitsTimestampTz {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("date_trunctstz")
    }
}
fn date_trunc_units_timestamp_tz(
    units: &str,
    ts: CheckedTimestamp<DateTime<Utc>>,
) -> Result<CheckedTimestamp<DateTime<Utc>>, EvalError> {
    match units.parse() {
        Ok(units) => Ok(date_trunc_inner(units, &*ts)?.try_into()?),
        Err(_) => Err(EvalError::UnknownUnits(units.into())),
    }
}
